<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Course Info CCN 3165</string>
<string name="Welcome">Welcome to</string>
<string name="CourseCode">CCN 3165</string>
<string name="CourseTitle">Mobile Apps Development</string>
<string name="Semester">Spring 2018</string>
<string name="clickprompt">Please click to continue ...</string>
<string name="menu">Main Menu Screen</string>
    <string-array name="menu_items">
        <item>Contact Information</item>
        <item>Time Table</item>
        <item>Course Information</item>
        <item>Syllabus</item>
        <item>Lectures</item>
        <item>Tutorials</item>
        <item>Exams</item>
        <item>Project</item>
        <item>Links</item>
    </string-array>
</resources>
